--- a/new-site/shapeways/index.html
+++ b/new-site/shapeways/index.html
@@ -68,7 +68,7 @@
 					<li>To re-order an order</li>
 				</ul>
 				<p>
-					While the first and second items are relevant for all Shapeways customers, the third and fourth, are also important behaviors for makers and business owners. As a result, the most common marketplace order history model, which surfaces individual item details directly on the order history, would not be a good solution for Shapeways. While this method is great for individual shoppers, for shop owners, who make up a large portion of Shapeways customers, order information presented this way would be repetitive and inefficient. The problem I needed to solve, then, was to surface appropriate action calls for individual shoppers, while simultaneously maintaining useful and easily navigable order information for makers and business owners. 
+					While the first and second items are relevant for all Shapeways customers, the third and fourth are primarily important behaviors for makers and business owners. As a result, the most common marketplace order history model, which surfaces individual item details directly on the order history, would not be a good solution for Shapeways. While this method is great for individual shoppers, for shop owners, who make up a large portion of Shapeways customers, order information presented this way would be repetitive and inefficient. The problem I needed to solve, then, was to surface appropriate action calls for individual shoppers, while simultaneously maintaining useful and easily navigable order information for makers and business owners. 
 				</p>
 
 				<h1>Implementation</h1>
