--- a/new-site/wonder/index.html
+++ b/new-site/wonder/index.html
@@ -41,16 +41,16 @@
 			</div>
 			<div class="image-container">
 				<div class="image-grid">
-					<img src="mama/BeAMother.png">
+					<img src="images/BeAMother.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="mama/Quote1.png">
+					<img src="images/Quote1.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="mama/Stork.png">
+					<img src="images/Stork.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="mama/SuperHero.png">
+					<img src="images/SuperHero.jpg">
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -65,16 +65,16 @@
 			</div>
 			<div class="image-container">
 				<div class="image-grid">
-					<img src="school/kinshasa.png">
+					<img src="images/kinshasa.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="school/ladder.png">
+					<img src="images/ladder.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="school/guatemala.png">
+					<img src="images/guatemala.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="school/philippines.png">
+					<img src="images/philippines.jpg">
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -86,37 +86,37 @@
 			</div>
 			<div class="image-container">
 				<div class="image-grid">
-					<img src="cake-coffee/cake-vertical.png">
+					<img src="images/cake-vertical.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="cake-coffee/coffee-vertical.png">
+					<img src="images/coffee-vertical.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="cake-coffee/cake-horizontal.png">
+					<img src="images/cake-horizontal.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="cake-coffee/coffee-horizontal.png">
+					<img src="images/coffee-horizontal.jpg">
 				</div>
 				<div class="clearfix"></div>
 			</div>
 			<div class="container">
 				<h1>Fundraising Guide</h1>
 				<p>
-					One of the largest projects I worked on was WONDER's fundraising guide, an informational packet designed to help volunteers plan and organize fundraising events independently. The finished work is an 18 page packet, and can be seen in full <a href="http://www.wonderfoundation.org.uk/sites/default/files/Fundraising%20guide.pdf" target="_blank">here</a>. Below are a few spreads from the packet.
+					The final project I worked on was WONDER's fundraising guide, an informational packet designed to help volunteers plan and organize fundraising events independently. The finished work is an 18 page packet, and can be seen in full <a href="http://www.wonderfoundation.org.uk/sites/default/files/Fundraising%20guide.pdf" target="_blank">here</a>. Below are a few spreads from the packet.
 				</p>
 			</div>
 			<div class="image-container">
 				<div class="image-grid">
-					<img src="fundraising/titlespread.png">
+					<img src="images/titlespread.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="fundraising/planevent.png">
+					<img src="images/planevent.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="fundraising/testimonials.png">
+					<img src="images/testimonials.jpg">
 				</div>
 				<div class="image-grid">
-					<img src="fundraising/map.png">
+					<img src="images/map.jpg">
 				</div>
 				<div class="clearfix"></div>
 			</div>
