fixed about link problem

--- a/new-site/shapeways/index.html
+++ b/new-site/shapeways/index.html
@@ -171,7 +171,7 @@
 		<div id="menu" class="blue">
 			<div class="menu-items">
 				<a class="menu-item" href="../index.html">Home</a>
-				<br><a class="menu-item" href="about/">About</a>
+				<br><a class="menu-item" href="../about/">About</a>
 				<br>
 				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
 				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
