--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -190,7 +190,7 @@
 		<div id="menu" class="yellow">
 			<div class="menu-items">
 				<a class="menu-item" href="../index.html">Home</a>
-				<br><a class="menu-item" href="about/">About</a>
+				<br><a class="menu-item" href="../about/">About</a>
 				<br>
 				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
 				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
