--- a/new-site/index.html
+++ b/new-site/index.html
@@ -47,7 +47,7 @@
 					<h1>Shapeways</h1>
 					<h4>UI / Front-end Engineering Intern</h4>
 					<p>
-						I designed and built user-facing features in the order / purchase experience of a Manhattan based 3D printing service and marketplace. I also worked on several front-end architecture refactor projects and contributed to Shapeways tech documentation. You can read my Medium post on Shapeways front-end architectural patterns <a href="https://medium.com/shapeways-tech/automating-discipline-3795de2df78b" target="_blank">here</a>.
+						Last summer, I designed and built user-facing features in the order / purchase experience of a Manhattan based 3D printing service and marketplace. I also worked on several front-end architecture refactor projects and contributed to Shapeways tech documentation. You can read my Medium post on Shapeways front-end architectural patterns <a href="https://medium.com/shapeways-tech/automating-discipline-3795de2df78b" target="_blank">here</a>.
 					</p>
 					<p>
 						<strong>Time Period:</strong> Summer 2015
