--- a/innod/index.html
+++ b/innod/index.html
@@ -99,11 +99,11 @@
 		<div id="menu" class="blue">
 			<div class="menu-items">
 				<a class="menu-item" href="../index.html">Home</a>
-				<br><a class="menu-item" href="../about/">About</a>
+				<br><a class="menu-item" href="../about/">About Me</a>
 				<br>
-				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
-				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
-				<br><a class="menu-item" href="../innod/">Innovative Design</a>
+				<br><a class="menu-item" href="../shapeways/">My Work at Shapeways</a>
+				<br><a class="menu-item" href="../wonder/">My Work at The WONDER Foundation</a>
+				<br><a class="menu-item" href="../innod/">My Work at Innovative Design</a>
 				<br>
 				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
 				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
