--- a/about/index.html
+++ b/about/index.html
@@ -141,7 +141,7 @@
 			</div>
 			<div class="box light-blue">
 				<!-- Coursework -->
-				<div class="box-content text-left">
+				<div class="box-content text-left margin">
 					<h2>Coursework</h2>
 					<p>
 						<strong>Currently Taking</strong>: User Interface Design (Android), Internet Architecture & Protocols (Python)
