--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -15,7 +15,7 @@
 		<div class="header background blue">
 			<div class="title">
 				<h1> In Summer 2015, I worked at Shapeways</h1>
-				<p> A Manhattan-based 3D printing service & marketplace </p>
+				<h3> A Manhattan-based 3D printing service & marketplace </h3>
 			</div>
 		</div>
 		<div class="waypoint-blue"></div>
