--- a/wonder/index.html
+++ b/wonder/index.html
@@ -15,7 +15,7 @@
 		<div class="header background blue">
 			<div class="title">
 				<h1> In Spring 2015, I worked at The WONDER Foundation</h1>
-				<p> A London based charity organization</p>
+				<h3> A London based charity organization</h3>
 			</div>
 		</div>
 		<div class="waypoint-blue"></div>
