--- a/innod/index.html
+++ b/innod/index.html
@@ -15,7 +15,7 @@
 		<div class="header background blue">
 			<div class="title">
 				<h1>Since Fall 2013, I have been a member of Innovative Design</h1>
-				<p> UC Berkeley's design & photography collective</p>
+				<h3> UC Berkeley's design & photography collective</3>
 			</div>
 		</div>
 		<div class="waypoint-blue"></div>
