--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 		<div class="header background yellow">
 			<div class="title">
 				<h1> My full name is Angira Shirahatti</h1>
-				<h4> Here are some pictures of me!</h4>
+				<p> Here are some pictures of me!</p>
 			</div>
 		</div>
 		<!-- Photos -->
