--- a/innod/index.html
+++ b/innod/index.html
@@ -39,12 +39,11 @@
 		<!-- Primary Content -->
 		<div class="background white">
 			<div class="container padding-top">
+				<img src="images/innodlogos.png">
 				<h1>Mentoring a Team</h1>
 				<p>
 					Every semester I’ve served on the leadership team of Innovative Design, I’ve lead a team of 8-10 intermediate graphic designers on one of InnoD’s “Gold Tiers”, teams that provide marketing and branding free for other UC Berkeley students and organizations. My time as a Gold Tier Leader has helped me learn a lot both about design leadership, and about working with clients on a commission basis. More than anything, leading a team has taught me about communication -- how to be helpful, how to be efficient, how to make sure that everyone is satisfied with the final work.
 				</p>
-			</div>
-			<div class="container padding-top">
 				<h1>Events & Outreach</h1>
 				<p>
 					During my time in InnoD, I have organized two major design outreach events. The first, titled “RGB” was designed to be the spring sister event to InnoD’s annual fall design competition, CMYK. RGB is designed to be an introduction  / crash course for campus community members with no design experience, while also being a learning experience for more seasoned designers. The event is organized into a series of workshops which range from introductions to Adobe software, to typography tutorials, to industry guest speakers. RGB is now an annual InnoD event.
@@ -53,7 +52,16 @@
 					The second, titled “Hack: Design for Good” was a 32-hour design-centered hackathon organized in Fall 2014. The hackathon was organized in cooperation with Cal Blueprint, a Berkeley organization that creates software for local non-profits.  The objective of the event was to bridge the gap between designers and programmers, to do a joint hack while making a genuine, tangible difference in the world. Local non-profits came to the hackathon to provide prompts, although any product built with social good in mind was eligible for prizes at the end of the hackathon.
 				</p>
 			</div>
-			<div class="container with-padding">
+			<div class="image-container">
+				<div class="image-grid">
+					<img src="images/lesson2.jpg">
+				</div>
+				<div class="image-grid">
+					<img src="images/lesson3.jpg">
+				</div>
+				<div class="clearfix"></div>
+			</div>
+			<div class="container">
 				<h1>Introduction to Photoshop & Illustrator</h1>
 				<p>
 					One of Cal’s most popular academic programs is the DECal, or Democratic Education at Cal program, which allows students to design and run classes for credit. Topics range from Harry Potter to Female Sexuality to iOS Development. For several years now, Innovative Design has run a popular Introduction to Photoshop & Illustrator course, which takes students through the basics of using the Adobe Suite, as well as providing an introduction to design principles such as use of color and typography, layout, and design methodology. This fall, I am serving as an instructor for the Intro to Photoshop & Illustrator DECal, updating and improving curriculum and homework for the class, and helping coordinate between the other instructors to ensure that our course is of uniformly high quality. I really believe in the transformative power of education, so I’m excited to get my first taste of being a teacher!
