added images to innod

--- a/innod/index.html
+++ b/innod/index.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<div class="container">
+			<div class="container padding-bottom">
 				<h1>Introduction to Photoshop & Illustrator</h1>
 				<p>
 					One of Cal’s most popular academic programs is the DECal, or Democratic Education at Cal program, which allows students to design and run classes for credit. Topics range from Harry Potter to Female Sexuality to iOS Development. For several years now, Innovative Design has run a popular Introduction to Photoshop & Illustrator course, which takes students through the basics of using the Adobe Suite, as well as providing an introduction to design principles such as use of color and typography, layout, and design methodology. This fall, I am serving as an instructor for the Intro to Photoshop & Illustrator DECal, updating and improving curriculum and homework for the class, and helping coordinate between the other instructors to ensure that our course is of uniformly high quality. I really believe in the transformative power of education, so I’m excited to get my first taste of being a teacher!
