--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<!-- Intro -->
-		<div class="intro background pink">
+		<div class="header background pink">
 			<img class="castle" src="images/castle.png">
 		</div>
 		<div class="waypoint-pink"></div>
