--- a/innod/index.html
+++ b/innod/index.html
@@ -92,7 +92,9 @@
 					<img class="social" src="../footer/email.png">
 				</a>
 				<div class="content">
-					Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
+					(C) 2015 Angira Shirahatti
+					<br>Made with the caffeine and good intentions in Berkeley, California
+					<br>Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
 				</div>
 			</div>
 
