--- a/wonder/index.html
+++ b/wonder/index.html
@@ -143,9 +143,9 @@
 					<img class="social" src="../footer/email.png">
 				</a>
 				<div class="content">
-					(C) 2015 Angira Shirahatti
+					<strong>Angira Shirahatti</strong>
 					<br>Made with the caffeine and good intentions in Berkeley, California
-					<br>Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
+					<br><br>Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
 				</div>
 			</div>
 
