--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -154,9 +154,8 @@
 					<img class="social" src="../footer/email.png">
 				</a>
 				<div class="content">
-					<strong>Angira Shirahatti</strong>
-					<br>Made with the caffeine and good intentions in Berkeley, California
-					<br><br>Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
+					<strong>Personal Website for Angira Shirahatti</strong>
+					<br>Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
 				</div>
 			</div>
 
