--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@
 		<!-- Header -->
 		<div class="header background yellow">
 			<div class="title">
-				<h1> My full name is Angira Shirahatti</h1>
-				<p> Here are some pictures of me!</p>
+				<h1>My full name is Angira Shirahatti</h1>
+				<h4>I'm a designer, developer, and UC Berkeley student</h4>
 			</div>
 		</div>
 		<!-- Photos -->
