--- a/innod/index.html
+++ b/innod/index.html
@@ -107,6 +107,13 @@
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
+
+		<!-- Cloud -->
+		<div class="cloud">
+			<img src="images/cloud.png">
+		</div>
+
+		<!-- Menu -->
 		<div id="menu" class="blue">
 			<div class="menu-items">
 				<a class="menu-item" href="../index.html">Home</a>
