--- a/about/index.html
+++ b/about/index.html
@@ -188,6 +188,13 @@
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
+		
+		<!-- Cloud -->
+		<div class="cloud">
+			<img src="images/cloud.png">
+		</div>
+
+		<!-- Menu -->
 		<div id="menu" class="yellow">
 			<div class="menu-items">
 				<a class="menu-item" href="../index.html">Home</a>
