--- a/about/index.html
+++ b/about/index.html
@@ -191,7 +191,7 @@
 		
 		<!-- Cloud -->
 		<div class="cloud">
-			<img src="images/cloud.png">
+			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
