--- a/innod/index.html
+++ b/innod/index.html
@@ -110,7 +110,7 @@
 
 		<!-- Cloud -->
 		<div class="cloud">
-			<img src="images/cloud.png">
+			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
