--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -172,7 +172,7 @@
 		
 		<!-- Cloud -->
 		<div class="cloud">
-			<img src="images/cloud.png">
+			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
