--- a/wonder/index.html
+++ b/wonder/index.html
@@ -161,7 +161,7 @@
 		
 		<!-- Cloud -->
 		<div class="cloud">
-			<img src="images/cloud.png">
+			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
