--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,7 @@
 		<!-- Header -->
 		<div class="header background yellow">
 			<div class="title">
+				<img class="cloud" src="../images/cloud.png">
 				<h1>My full name is Angira Shirahatti</h1>
 				<h4>I'm a designer, developer, and UC Berkeley student</h4>
 			</div>
@@ -189,11 +190,6 @@
 			</div>
 		</div>
 		
-		<!-- Cloud -->
-		<div class="cloud">
-			<img src="../images/cloud.png">
-		</div>
-
 		<!-- Menu -->
 		<div id="menu" class="yellow">
 			<div class="menu-items">
