--- a/wonder/index.html
+++ b/wonder/index.html
@@ -14,6 +14,7 @@
 		<!-- Header -->
 		<div class="header background blue">
 			<div class="title">
+				<img class="cloud" src="../images/cloud.png">
 				<h1> In Spring 2015, I worked at The WONDER Foundation</h1>
 				<h4> A London based charity organization</h4>
 			</div>
@@ -157,11 +158,6 @@
 			<div class="menu-link mobile">
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
-		</div>
-		
-		<!-- Cloud -->
-		<div class="cloud">
-			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
