--- a/innod/index.html
+++ b/innod/index.html
@@ -14,6 +14,7 @@
 		<!-- Header -->
 		<div class="header background blue">
 			<div class="title">
+				<img class="cloud" src="../images/cloud.png">
 				<h1>Since Fall 2013, I have been a member of Innovative Design</h1>
 				<h4> UC Berkeley's Student-run Creative Agency</h4>
 			</div>
@@ -106,11 +107,6 @@
 			<div class="menu-link mobile">
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
-		</div>
-
-		<!-- Cloud -->
-		<div class="cloud">
-			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
