--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -14,6 +14,7 @@
 		<!-- Header -->
 		<div class="header background blue">
 			<div class="title">
+				<img class="cloud" src="../images/cloud.png">
 				<h1> In Summer 2015, I worked at Shapeways</h1>
 				<h4> A Manhattan-based 3D printing service & marketplace </h4>
 			</div>
@@ -168,11 +169,6 @@
 			<div class="menu-link mobile">
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
-		</div>
-		
-		<!-- Cloud -->
-		<div class="cloud">
-			<img src="../images/cloud.png">
 		</div>
 
 		<!-- Menu -->
