--- a/wonder/index.html
+++ b/wonder/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 		<div class="header background blue">
 			<div class="title">
-				<img class="cloud" src="../images/cloud.png">
+				<img class="cloud" src="../images/cloud-graphic.png">
 				<h1> In Spring 2015, I worked at The WONDER Foundation</h1>
 				<h4> A London based charity organization</h4>
 			</div>
