--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 		<div class="header background blue">
 			<div class="title">
-				<img class="cloud" src="../images/cloud-graphic.png">
+				<img class="cloud" src="../images/cloud.png">
 				<h1> In Summer 2015, I worked at Shapeways</h1>
 				<h4> A Manhattan-based 3D printing service & marketplace </h4>
 			</div>
