--- a/shapeways/index.html
+++ b/shapeways/index.html
@@ -8,6 +8,8 @@
 
 		<title>Angira Shirahatti, Design & Development</title>
 
+		<link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
+
 		<link rel="stylesheet" type="text/css" href="../css/work.css"></style>
 	</head>
 	<body>
