--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
 
 		<title>Angira Shirahatti, Design & Development</title>
 
-		<link rel="shortcut icon" type="image/png" href="../images/favicon.ico">
+		<link rel="shortcut icon" type="image/jpg" href="../images/favicon.jpg">
 
 		<link rel="stylesheet" type="text/css" href="../css/about.css"></style>
 	</head>
