--- a/Etsy/challenge.html
+++ b/Etsy/challenge.html
@@ -12,14 +12,14 @@
 	</head>
 
 	<body>
-		<div class="container title">
-			<div class="title-content">
-				<h1 class="title-h1">Etsy on the Moon</h1>
-			</div>
+		<div class="container clear">
+		</div>
+		<div class="orange title">
+			<h1 class="title-h1">Etsy on the Moon</h1>
 		</div>
 		<div class="container light-gray">
 			<div class="content">
-				<h1>Let's take handmade <br> where it's never gone before.</h1>
+				<h1>Let's take handmade <br> where it's never gone before!</h1>
 				<p>
 					Community is Etsy’s heart and soul. That’s why, for our 10th anniversary, we want to take our global community right out of this world. Join us as, for the first time ever, we take handmade to the moon!	
 				</p>
@@ -52,7 +52,7 @@
 						</div>
 						<div>
 							<label for="question">Why do you love Etsy?</label>
-							<br><input type="text" id="question" id="question" name="question" class="grid">
+							<br><textarea id="question" name="question" class="grid"></textarea>
 							<div id='characters-remaining'>Remaining characters : 140</span>
 						
 						</div>
