--- a/Etsy/challenge.html
+++ b/Etsy/challenge.html
@@ -100,7 +100,7 @@
 							<a href="#"><img src="img/item5.png"></a>
 						</div>
 						<div class="col-1-3">
-							<a href="#"><img src="img/item6.png"></a>
+							<a href="https://www.etsy.com/search/home-and-living?q=moon&ref=esearch_group2"><img src="img/item6.png"></a>
 						</div>
 
 					</div>
