--- a/Etsy/challenge.html
+++ b/Etsy/challenge.html
@@ -82,22 +82,22 @@
 					<br>
 					<div class="grid">
 						<div class="col-1-3">
-							<a href="#"><img src="img/item1.png"></a>
+							<a href="https://www.etsy.com/listing/237533464/moon-phases-poster-moon-art-moon-poster?ref=shop_home_active_1&ga_search_query=Moon"><img src="img/item1.png"></a>
 						</div>
 						<div class="col-1-3">
-							<a href="#"><img src="img/item2.png"></a>
+							<a href="https://www.etsy.com/listing/178018283/planet-necklace-jasper-solar-system?ref=shop_home_active_1&ga_search_query=outer%2Bspace"><img src="img/item2.png"></a>
 						</div>
 						<div class="col-1-3">
-							<a href="#"><img src="img/item3.png"></a>
+							<a href="https://www.etsy.com/listing/220035730/moon-notebook-moon-journal-outer-space?ref=shop_home_active_3"><img src="img/item3.png"></a>
 						</div>
 
 					</div>
 					<div class="grid">
 						<div class="col-1-3">
-							<a href="#"><img src="img/item4.png"></a>
+							<a href="https://www.etsy.com/listing/190693171/tiny-rose-gold-moon-necklace?ref=shop_home_active_2&ga_search_query=moon"><img src="img/item5.png"></a>
 						</div>
 						<div class="col-1-3">
-							<a href="#"><img src="img/item5.png"></a>
+							<a href="https://www.etsy.com/listing/240303632/moon-phases-sterling-silver-earring?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=moon&ref=sr_gallery_2"><img src="img/item4.png"></a>
 						</div>
 						<div class="col-1-3">
 							<a href="https://www.etsy.com/search/home-and-living?q=moon&ref=esearch_group2"><img src="img/item6.png"></a>
