--- a/xSDK/compliance.html
+++ b/xSDK/compliance.html
@@ -20,7 +20,7 @@
 		<div class="navigation-container">
 			<div class="navigation">
 				<a class="nav-link" href="index.html">Home</a>
-				<a class="nav-link selected" href="getstarted.html">User Guide</a>
+				<a class="nav-link selected" href="getstarted.html">Getting Started</a>
 				<a class="nav-link" href="software.html">About</a>
 				<a class="nav-link" href="#">Download</a>
 			</div>
@@ -30,7 +30,7 @@
 		<div class="content-container">
 			<!-- Internal navigation sidebar -->
 			<div class="sidebar">
-				<a class="sidebar-nav" href="getstarted.html">Getting Started</a>
+				<a class="sidebar-nav" href="index.html">Introduction</a>
 				<a class="sidebar-nav" href="packages.html">Packages</a>
 				<a class="sidebar-nav selected" href="compliance.html">Compliance</a>
 			</div>
