--- a/xSDK/faq.html
+++ b/xSDK/faq.html
@@ -20,7 +20,7 @@
 		<div class="navigation-container">
 			<div class="navigation">
 				<a class="nav-link" href="index.html">Home</a>
-				<a class="nav-link" href="getstarted.html">User Guide</a>
+				<a class="nav-link" href="getstarted.html">Getting Started</a>
 				<a class="nav-link selected" href="software.html">About</a>
 				<a class="nav-link" href="#">Download</a>
 			</div>
