--- a/xSDK/getstarted.html
+++ b/xSDK/getstarted.html
@@ -20,7 +20,7 @@
 		<div class="navigation-container">
 			<div class="navigation">
 				<a class="nav-link" href="index.html">Home</a>
-				<a class="nav-link selected" href="getstarted.html">User Guide</a>
+				<a class="nav-link selected" href="getstarted.html">Getting Started</a>
 				<a class="nav-link" href="software.html">About</a>
 				<a class="nav-link" href="#">Download</a>
 			</div>
@@ -31,8 +31,9 @@
 			<!-- Internal navigation sidebar -->
 			<div class="sidebar">
 				<a class="sidebar-nav selected" href="getstarted.html">Getting Started</a>
-				<a class="sidebar-nav" href="packages.html">Packages</a>
-				<a class="sidebar-nav" href="compliance.html">Compliance</a>
+				<a class="sidebar-nav" href="#">Example usage from PETSc</a>
+				<a class="sidebar-nav" href="#">Example usage from SuperLUe</a>
+				<a class="sidebar-nav" href="#">Example usage from Trilinos</a>
 			</div>
 			<!-- Primary content -->
 			<div class="content">
