--- a/xSDK/index.html
+++ b/xSDK/index.html
@@ -20,7 +20,7 @@
 		<div class="navigation-container">
 			<div class="navigation">
 				<a class="nav-link selected" href="index.html">Home</a>
-				<a class="nav-link" href="getstarted.html">User Guide</a>
+				<a class="nav-link" href="getstarted.html">Getting Started</a>
 				<a class="nav-link" href="software.html">About</a>
 				<a class="nav-link" href="#">Download</a>
 			</div>
@@ -28,6 +28,12 @@
 
 		<!-- Content -->
 		<div class="content-container">
+			<!-- Internal navigation sidebar -->
+			<div class="sidebar">
+				<a class="sidebar-nav selected" href="index.html">Introduction</a>
+				<a class="sidebar-nav" href="packages.html">Packages</a>
+				<a class="sidebar-nav" href="compliance.html">Compliance</a>
+			</div>
 			<!-- Primary content -->
 			<div class="content">
 				<h1>xSDK</h1>
