--- a/xSDK/packages.html
+++ b/xSDK/packages.html
@@ -19,8 +19,8 @@
 		<!-- Navigation -->
 		<div class="navigation-container">
 			<div class="navigation">
-				<a class="nav-link" href="index.html">Home</a>
-				<a class="nav-link selected" href="getstarted.html">Getting Started</a>
+				<a class="nav-link selected" href="index.html">Home</a>
+				<a class="nav-link" href="getstarted.html">Getting Started</a>
 				<a class="nav-link" href="software.html">About</a>
 				<a class="nav-link" href="#">Download</a>
 			</div>
