--- a/xSDK/getstarted.html
+++ b/xSDK/getstarted.html
@@ -31,6 +31,7 @@
 			<!-- Internal navigation sidebar -->
 			<div class="sidebar">
 				<a class="sidebar-nav selected" href="getstarted.html">Getting Started</a>
+				<a class="sidebar-nav" href="#">Installing the software</a>
 				<a class="sidebar-nav" href="#">Example usage from PETSc</a>
 				<a class="sidebar-nav" href="#">Example usage from SuperLUe</a>
 				<a class="sidebar-nav" href="#">Example usage from Trilinos</a>
