--- a/xSDK/getstarted.html
+++ b/xSDK/getstarted.html
@@ -32,9 +32,7 @@
 			<div class="sidebar">
 				<a class="sidebar-nav selected" href="getstarted.html">Getting Started</a>
 				<a class="sidebar-nav" href="#">Installing the software</a>
-				<a class="sidebar-nav" href="#">Example usage from PETSc</a>
-				<a class="sidebar-nav" href="#">Example usage from SuperLUe</a>
-				<a class="sidebar-nav" href="#">Example usage from Trilinos</a>
+				<a class="sidebar-nav" href="#">Example usage</a>
 			</div>
 			<!-- Primary content -->
 			<div class="content">
