--- a/xSDK/index.html
+++ b/xSDK/index.html
@@ -60,20 +60,23 @@
 					<table>
 						<tr>
 							<td>
-								<a class="sitemap-link" href="index.html">Home</a>	
-								<br><a class="sitemap-link" href="#">Download</a>
-							</td>
-							<td>
-								User Guide
-								<br><a class="sitemap-link" href="getstarted.html">Getting Started</a>
+								<a class="sitemap-link" href="index.html">Home</a>
 								<br><a class="sitemap-link" href="packages.html">Packages</a>
-								<br><a class="sitemap-link" href="compliance.html">Compliance</a>
+								<br><a class="sitemap-link" href="compliance.html">Compliance</a>	
 							</td>
 							<td>
-								About
-								<br><a class="sitemap-link" href="software.html">Software</a>
+								<br><a class="sitemap-link" href="getstarted.html">Getting Started</a>
+								<br><a class="sitemap-link" href="getstarted.html">Installation</a>
+								<br><a class="sitemap-link" href="getstarted.html">Example usage</a>
+								
+							</td>
+							<td>
+								<br><a class="sitemap-link" href="software.html">About</a>
 								<br><a class="sitemap-link" href="team.html">Team</a>
 								<br><a class="sitemap-link" href="faq.html">FAQ</a>
+							</td>
+							<td>
+								<a class="sitemap-link" href="#">Download</a>
 							</td>
 						</tr>
 					</table>
