--- a/xSDK/team.html
+++ b/xSDK/team.html
@@ -66,13 +66,13 @@
 								<br><a class="sitemap-link" href="compliance.html">Compliance</a>	
 							</td>
 							<td>
-								<br><a class="sitemap-link" href="getstarted.html">Getting Started</a>
+								<a class="sitemap-link" href="getstarted.html">Getting Started</a>
 								<br><a class="sitemap-link" href="getstarted.html">Installation</a>
 								<br><a class="sitemap-link" href="getstarted.html">Example usage</a>
 								
 							</td>
 							<td>
-								<br><a class="sitemap-link" href="software.html">About</a>
+								<a class="sitemap-link" href="software.html">About</a>
 								<br><a class="sitemap-link" href="team.html">Team</a>
 								<br><a class="sitemap-link" href="faq.html">FAQ</a>
 							</td>
