--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h1>Hi, my name is Angira</h1>
 				<h2>I like tea, audiobooks, and making cool stuff</h2>
 				<p>
-					I'm currently finishing up a degree in computer science at <a href="http://designatberkeley.com/" target="_blank">UC Berkeley</a>, with a focus on human-computer interaction I love exploring the ways technology can enhance human creativity and empthy, and believe in the democratizing power of education.
+					I'm currently finishing up a degree in computer science at <a href="http://designatberkeley.com/" target="_blank">UC Berkeley</a>, with a focus on human-computer interaction. I love exploring the ways technology can enhance human creativity and empthy, and believe in the democratizing power of education.
 				</p>
 				<p>
 					In the past, I've had the pleasure of working as a product design intern at <a href="https://www.etsy.com/" target="_blank">Etsy</a>, a front-end engineering intern at <a href="http://www.shapeways.com/" target="_blank">Shapeways</a>, and a communication design intern at <a href="http://www.wonderfoundation.org.uk/" target="_blank">The WONDER Foundation</a>. Currently, I'm a TA for <a href-"http://cs160.ninja/" target="_blank">CS160</a>, Berkeley’s user interface design class. I also do freelance web and communication design, so while I'm updating my website, please <a href="mailto:ashirahattia@gmail.com">get in touch</a> with me to see my portfolio.
