--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<title> Angira Shirahatti </title>
 	<!-- favicon goes here -->
 	<link rel = "stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 
 </head>
 
