--- a/about/index.html
+++ b/about/index.html
@@ -33,6 +33,9 @@
 			<p>
 				In my spare time I listen to books, drink tea, and eat tasty food. In fact, the majority of my life revolves around eating tasty food. You can read my thoughts on audiobooks on <a href="https://medium.com/@ashirahatti" target="_blank">Medium</a>, or see my would-be artsy photos on <a href="https://www.instagram.com/ashirahattia/" target="_blank">Instagram</a>.
 			</p>
+			<p>
+				You can also see a pdf of my <a href="resume.pdf">resume</a> or just scroll down.
+			</p>
 			
 			<h1> Experience </h1>
 
