--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- Styling & Viewing information -->
 	<title> Angira Shirahatti </title>
-	<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg">
+	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 	<link rel = "stylesheet" type="text/css" href="stylesheet.css">
 
 </head>
