--- a/index.html
+++ b/index.html
@@ -1,156 +1,164 @@
-<!Doctype HTML>
 <html>
-<head>
-	<!-- Screen and search information -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+	    <!-- Screen and search information -->
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Authorship information -->
-	<meta name="description" content="Personal website & portfolio for Angira Shirahatti, designer, developer & illustrator">
-	<meta name="author" content="Angira Shirahatti">
+	    <!-- Authorship information -->
+	    <meta name="description" content="Personal website & portfolio for Angira Shirahatti, designer, developer & illustrator">
+	    <meta name="author" content="Angira Shirahatti">
 
-	<!-- Styling & Viewing information -->
-	<title> Angira Shirahatti </title>
-	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
-	<link rel = "stylesheet" type="text/css" href="stylesheet.css">
+	    <!-- Styling & Viewing information -->
+	    <title> Angira Shirahatti</title>
+	    <!--<link rel="shortcut icon" type="image/jpg" href="#">-->
+	    <link rel = "stylesheet" type="text/css" href="stylesheet_v7.css">
+	</head>
 
-</head>
-
-<body>
-
-	<!-- Content -->
-	<div class="content">
-		<!-- Header image -->
-		<div class="header-image-wrapper">
-			<img class="header-image" src="images/me.png">
+	<body>
+		<div class="hero-container">
+			<div class="hero-content hero-left">
+				<h1>Angira <br> Shirahatti</h1>
+				<div class="navigation-container">
+					<div class="navigation-item">
+						<a class="navigation" href="#education">Education</a>
+					</div>
+					<div class="navigation-item">
+						<a class="navigation" href="#work">Work Experience</a>
+					</div>
+					<div class="navigation-item">
+						<a class="navigation" href="#teaching">Teaching Experience</a>
+					</div>
+				</div>
+			</div>
+			<div class="hero-content hero-right">
+				<p class="subtitle">
+					Product designer with a background in computer science, audiobook addict, and amateur illustrator. Currently working on marketing tools for creative entrepreneurs at Etsy.
+				</p>
+			</div>
 		</div>
-		<!-- Primary content -->
-		<div class="primary-content">
-			<h1> Hi! I'm Angira </h1>
-			<p>
-				I’m a computer science and design student at <a href="#">UC Berkeley.</a> I love designing intuitive solutions to complex problems, and teaching others to do the same. I believe that great design comes from empathy and attention to detail, and strive to bring these things to all the work I do.
-			</p>
-			<!-- Work -->
-			<div>
-				<!-- Etsy -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/etsy.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>Product Design, Etsy</h2>
-						<p>
-							Prototyping, user research, user experience, visual design
-							<br><a href="etsy/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
-				<!-- Shapeways -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/shapeways.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>Front-end Engineering, Shapeways</h2>
-						<p>
-							Web design, front-end architecture, continuous deployment
-							<br><a href="shapeways/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
-				<!-- Tennis Tracker -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/tennistracker.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>Tennis Tracker</h2>
-						<p>
-							Mobile design, user research, usability testing, product development
-							<br><a href="tennistracker/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
-				<!-- Dress Code -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/dresscode.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>Dress Code</h2>
-						<p>
-							Mobile design, product development, microcontrollers
-							<br><a href="dresscode/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
-				<!-- WONDER -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/wonder.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>The WONDER Foundation</h2>
-						<p>
-							Visual design, brand development
-							<br><a href="wonder/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
-				<!-- Teaching -->
-				<div class="work-wrapper">
-					<!-- Image -->
-					<div class="work-image">
-						<img class="work-icon" src="images/teaching.jpg">
-					</div>
-					<!-- Text -->
-					<div class="work-text">
-						<h2>Teaching</h2>
-						<p>
-							CS160/260A User Interface Design, and Introduction to Photoshop and Illustrator
-							<br><a href="teaching/">Read more →</a>
-						</p>
-					</div>
-				</div>
-
+		<div class="education-container" id="education">
+			<div class="education-content">
+				<p class="lead-in">01</p>
+				<h2>Education</h2>
+				<h3>
+					University of California, Berkeley.
+					<br>Bachelor of Arts, Computer Science (2013-2016).
+				</h3>
+				<p class="body-paragraph">
+					Coursework  included study in human-computer interaction, human-centered design, ethnography, technology and social practice art, critical making, artificial intelligence, and 3D fabrication, along with UC Berkeley’s core computer science curriculum.
+				</p>
 			</div>
 		</div>
 
-		<!-- Footer -->
-		<div class="footer">
-			<p>
-				Personal Portfolio, Angira Shirahatti
-				<br>
-				<a href="@mailto:ashirahattia@gmail.com">Email</a>
-				 • <a href="https://dribbble.com/ashirahattia" target="_blank">Dribbble</a> 
-				 • <a href="https://medium.com/@ashirahatti" target="_blank">Medium</a>
-				 • <a href="https://www.instagram.com/ashirahattia/" target="_blank">Instagram</a>
-			</p>
+		<div class="work-container" id="work">
+			<div class="work-header">
+				<p class="lead-in">02</p>
+				<h2>Work</h2>
+			</div>
+			<div class="work-item">
+				<div class="work-identifiers">
+					<h3>Product Designer, Etsy.
+						<br>Experience design, product strategy, user research, front-end development (2017-present).
+					</h3>
+				</div>
+				<div class="work-description">
+					<p class="body-paragraph">
+						Leading design and research for a complete re-imagining of Etsy’s digital advertising and growth tools. Previously designed and developed a suite of tools to help Etsy sellers strategically leverage discounts. Contributing to Etsy’s design system, Collage. Championing modernized, human-centered approach to iterative development and hypothesis validation. My work at Etsy is currently protected under an NDA.
+					</p>
+					<p class="body-paragraph">
+						<a href="mailto:ashirahattia@gmail.com">Get in touch for more on my work at Etsy</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="work-item">
+				<div class="work-identifiers">
+					<h3>Design intern, Etsy.
+						<br>Experience design, front-end development (2016).
+					</h3>
+				</div>
+				<div class="work-description">
+					<p class="body-paragraph">
+						Developed inventory management tools for Etsy sellers, specifically tools for managing customizable product specifications (such as the size of a clothing item or the length of a necklace chain) on tablets. Also assisted with design for the Sell on Etsy app on iOS and Android.
+
+					</p>
+					<p class="body-paragraph">
+						<a href="https://medium.com/etsy-design/angira-the-internship-21709b5bc09d" target="_blank">Read an essay on my internship</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="work-item">
+				<div class="work-identifiers">
+					<h3>Designer, Wonder Foundation.
+						<br>Graphic design, brand development (2015).
+					</h3>
+				</div>
+				<div class="work-description">
+					<p class="body-paragraph">
+						Developed promotional materials for fundraising events, solidified brand voice and guidelines, and assisted with web development for the Wonder Foundation, a  London-based charity focused on enabling access to education for women and girls in underserved communities around the world.
+					</p>
+					<p class="body-paragraph">
+						<a href="https://wonderfoundation.org.uk/" target="_blank">Learn more about Wonder</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="work-item">
+				<div class="work-identifiers">
+					<h3>UI Intern, Shapeways.
+						<br>Interaction design, front-end development (2015).
+					</h3>
+				</div>
+				<div class="work-description">
+					<p class="body-paragraph">
+						Refactored the front-end code for Shapeways’s checkout flow, redesigned and refactored the order history page, and contributed to the Shapeway's adoption of object-oriented CSS.
+					</p>
+					<p class="body-paragraph">
+						<a href="https://medium.com/shapeways-tech/automating-discipline-3795de2df78b" target="_blank">Read my essay on front-end architecture</a>
+					</p>
+				</div>
+			</div>
 		</div>
 
-	</div>
+		<div class="teaching-container" id="teaching">
+			<div class="teaching-header">
+				<p class="lead-in">03</p>
+				<h2>Teaching</h2>
+			</div>
+			<div class="teaching-item">
+				<h3>
+					Course Instructor, Gakko.
+					<br>Curriculum design, classroom instruction (2018).
+				</h3>
+				<p class="body-paragraph">
+					Designed and taught after school course on human-centered design to NYC high school students. Topics covered included contextual inquiry, usability research, ideation, visual and interaction design, prototyping methodology, accessibility and inclusion, and design software.
+				</p>
+				<p class="body-paragraph">
+					<a href="https://drive.google.com/open?id=1V0QDW3wFN5fjBvpmhmiijYPyyNplyWQN" target="_blank">See full course materials</a>
+				</p>
+			</div>
 
-	<!-- Navigation -->
-	<div class="navigation">
-		<span class="nav-links">
-			<a class="nav-link " href="index.html">Work</a>
-			<a class="nav-link" href="about/index.html">About</a>
-		</span>
-	</div>
-</body>
+			<div class="teaching-item">
+				<h3>
+					Teaching Assistant, UC Berkeley.
+					<br>Classroom instruction, activity facilitation, mentorship (2016).
+				</h3>
+				<p class="body-paragraph">
+					Assisted with instruction for UC Berkeley's CS160, an introduction to interface design and human-computer interaction for 3rd and 4th year computer science majors, and graduate students in the School of Information. Topics covered included contextual inquiry and observational research, prototyping and usability testing, information architecture, and visual design, with a semester long project focused on emerging Internet of Things technology. 
+				</p>
+				<p class="body-paragraph">
+					<a href="https://www2.eecs.berkeley.edu/Courses/CS160/" target="_blank">See CS160 course description</a>
+				</p>
+			</div>
+		</div>
+
+		<div class="footer">
+			<p class="footer-paragraph">
+				Get in touch at ashirahattia@gmail.com.
+				<br>This website was made using only HTML and CSS to maximize performance and minimize carbon footprint.
+			</p>
+		</div>
+	</body>
+
 </html>
